# basenji

./: .gitignore  README.md  akita_cli.py  akita_cli_v1.py  akita_cli_v2.py  installation.md  pyproject.toml
basenji/: seqnn.py
data/: hg38_statistics.json  hg38_targets.txt  mm10_statistics.json  mm10_targets.txt
