[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "basenji"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.8.*"

# Authors must be a list of tables
authors = [{ name = "David Kelley" }]

# License must be a TABLE, not a string blob
license = { text = "Apache-2.0" }
dependencies = [
    "astropy",
    "cython",
    "h5py",
    "intervaltree",
    "joblib",
    "matplotlib",
    "natsort",
    "networkx",
    "numpy",
    "packaging",
    "pandas",
    "pillow",
    "pybedtools",
    "pybigwig",
    "pysam",
    "scikit-learn",
    "scipy",
    "seaborn",
    "statsmodels",
    "tabulate",
    "cooler",
    "cooltools",
    "tensorflow==2.8.0",
    "tensorflow-io-gcs-filesystem==0.25.0",
    "protobuf==3.20.*",
    "click>=8.1.8",
    "gsutil",
    "tqdm>=4.67.1",
]
